# autocad-mcp

./: .gitignore  README.md  pyproject.toml  server.py
