[project]
name = "autocad-mcp"
version = "0.1.0"
description = "An MCP server that drives AutoCAD on Windows via the ActiveX/COM automation interface."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pywin32>=306 ; sys_platform == 'win32'",
    "Pillow>=10.0.0 ; sys_platform == 'win32'",
]

[project.scripts]
autocad-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]